# LearnOGLES

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/myh/learnogles/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.fs  test.txt  test.vs
app/src/main/cpp/: CMakeLists.txt  GlView.cpp  GlView.h  LogUtil.cpp  LogUtil.h  MayhPrefix.h  Sence.cpp  Sence.h  Utils.cpp  Utils.h  native-lib.cpp
app/src/main/cpp/Glm/gtc/: ._matrix_transform.hpp
app/src/main/java/com/myh/learnogles/: MainActivity.java
app/src/main/java/com/myh/learnogles/glview/: MayhGLSurfaceViewRenderer.java  MayhGlSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/myh/learnogles/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
